--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
   <link rel="icon" type="image/svg+xml" href="/vite.svg" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Mene-Market</title>
+  <!-- Favicon -->
+  <link rel="shortcut icon" href="./public/img/icon.png" type="image/x-icon">
   <!-- fonts -->
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
