--- a/index.html
+++ b/index.html
@@ -3,8 +3,13 @@
 
 <head>
   <meta charset="UTF-8" />
-  <link rel="icon" type="image/svg+xml" href="/vite.svg" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta id="description" name="description" content="To'lamirzayev Mirodil Severyanochka nomli sayiti">
+  <meta id="keywords" name="keywords"
+    content="Mene-Market, mene-market, Mirodil, mirodil, Mirodil To'lamirzayev, mirodil to'lamirzayev, Ismoiljon, ismoiljon, Ismoiljon Yusupov, ismoiljon yusupov, sayt, mirodil_dev, Mirodil_Dev, mirodil-menemarket, ismoiljon mene market, Mirodil-Market, mirodil-market, Mirodil-Mene-Market, Online Shop, online shop, Ismoiljon market, veb-sayt, web-sayt">
+  <meta id="name" name="itemprop" content="Mene Market ">
+  <meta property="og:type" content="website" />
+  <meta property="og:url" content="https://mene-market-shop.vercel.app/" />
   <title>Mene-Market</title>
   <!-- Favicon -->
   <link rel="shortcut icon" href="./public/img/icon.png" type="image/x-icon">
@@ -12,6 +17,14 @@
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap" rel="stylesheet">
+
+  <!-- Google -->
+    <meta name="google-site-verification" content="xnrkEfCIngnJzvAAFmne3nA1okjknAaHAdsMH6slK7M" />
+    <meta name="googlebot" id="googlebot" content="index, follow">
+    <!-- Yandeks -->
+    <meta name="yandex-verification" content="0d98a88b237bac56" />
+    <meta name="yandex-verification" id="yandex-verification" content="index, follow">
+    <meta name="yandex" id="yandex" content="index, follow">
 </head>
 
 <body>
