--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta name="google-site-verification" content="qqUM92iDwDZ2r76ioyZcWN1guc7dPsk5bWIhB9Nybfw" />
   <meta id="description" name="description" content="To'lamirzayev Mirodil Severyanochka nomli sayiti">
   <meta id="keywords" name="keywords"
     content="Mene-Market, mene-market, Mirodil, mirodil, Mirodil To'lamirzayev, mirodil to'lamirzayev, Ismoiljon, ismoiljon, Ismoiljon Yusupov, ismoiljon yusupov, sayt, mirodil_dev, Mirodil_Dev, mirodil-menemarket, ismoiljon mene market, Mirodil-Market, mirodil-market, Mirodil-Mene-Market, Online Shop, online shop, Ismoiljon market, veb-sayt, web-sayt">
