--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <meta name="google-site-verification" content="qqUM92iDwDZ2r76ioyZcWN1guc7dPsk5bWIhB9Nybfw" />
   <meta id="description" name="description" content="To'lamirzayev Mirodil Severyanochka nomli sayiti">
   <meta id="keywords" name="keywords"
-    content="Mene-Market, mene-market, Mirodil, mirodil, Mirodil To'lamirzayev, mirodil to'lamirzayev, Ismoiljon, ismoiljon, Ismoiljon Yusupov, ismoiljon yusupov, sayt, mirodil_dev, Mirodil_Dev, mirodil-menemarket, ismoiljon mene market, Mirodil-Market, mirodil-market, Mirodil-Mene-Market, Online Shop, online shop, Ismoiljon market, veb-sayt, web-sayt">
+    content="Mene-Market, mene-market, Mirodil, mirodil, Mirodil To'lamirzayev, mirodil to'lamirzayev, Ismoiljon, ismoiljon, Ismoiljon Yusupov, ismoiljon yusupov, sayt, ismoiljon_dev, Ismoiljon_Dev, ismoiljon dev, Ismoiljon dev mirodil_dev, Mirodil_Dev, mirodil-menemarket, ismoiljon mene market, Mirodil-Market, mirodil-market, Mirodil-Mene-Market, Online Shop, online shop, Ismoiljon market, veb-sayt, web-sayt">
   <meta id="name" name="itemprop" content="Mene Market ">
   <meta property="og:type" content="website" />
   <meta property="og:url" content="https://mene-market-shop.vercel.app/" />
